log
Tue 14 May 2024 10:35:07 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|4
total_score: 15/70
804326b
Tue 14 May 2024 10:37:09 PM UTC: 
 sudoku.c | 48 ++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 48 insertions(+)
 tests:  5|3
total_score: 35/70
b5b0f1c
Tue 14 May 2024 10:37:57 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
548a88a
Tue 14 May 2024 10:40:16 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
8deabce
Tue 14 May 2024 10:46:44 PM UTC: 
 sudoku.c | 25 +++++++++++++++++--------
 1 file changed, 17 insertions(+), 8 deletions(-)
 tests:  6|2
total_score: 45/70
240ca66
Tue 14 May 2024 10:47:09 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  6|2
total_score: 45/70
423b3d8
Tue 14 May 2024 10:49:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
796cc6a
Tue 14 May 2024 10:52:13 PM UTC: 
 sudoku.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:132:30: error: implicit declaration of function ‘is_node_in_list’ [-Werror=implicit-function-declaration]
  132 |                         if (!is_node_in_list(list, new_node)) { // Check if node already exists in list
      |                              ^~~~~~~~~~~~~~~
sudoku.c: In function ‘is_node_in_list’:
sudoku.c:151:13: error: implicit declaration of function ‘compare_nodes’ [-Werror=implicit-function-declaration]
  151 |         if (compare_nodes(current, n) == 1) {
      |             ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c17759
Tue 14 May 2024 10:52:31 PM UTC: 
 sudoku.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:132:30: error: implicit declaration of function ‘is_node_in_list’ [-Werror=implicit-function-declaration]
  132 |                         if (!is_node_in_list(list, new_node)) { // Check if node already exists in list
      |                              ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
89f6f87
